# membox

./: ChangeLog  Makefile  Makefile.in  README.membox  aclocal.m4  configure  configure.in  gw-membox-config.h  gw-membox-config.h.in  membox-config
conf/: membox.conf.sample
gw/: membox.c  membox.h
gwlib/: membox-cfg.def
test/: test_send.c
utils/: foobar-config.sh
